<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quantity_header"
        android:textAllCaps="true"
        android:textSize="16dp" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_increment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:onClick="increment"
        android:text="@string/btn_increment" />

    <TextView
        android:id="@+id/quantity-text-view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16dp"
        android:textColor="#000000"
        android:text="0"
        />

    <Button
        android:id="@+id/btn_decrement"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:onClick="decrement"
        android:text="@string/btn_decrement" />
</LinearLayout>




    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price_header"
        android:textAllCaps="true"
        android:textSize="16dp" />
    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:textColor="#000000"
        android:text="0"
        />

    <Button
        android:id="@+id/btn_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#7CB342"
        android:onClick="submitOrder"
        android:text="@string/btn_order" />

    <Button
        android:id="@+id/btn_erase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#D81B60"
        android:onClick="reset"
        android:text="@string/btn_reset" />

</LinearLayout>
